[tool.poetry]
authors = ["Hju Kneyck Flores <hjucode@gmail.com>"]
description = ""
name = "app"
version = "0.1.0"

[tool.poetry.dependencies]
Pillow = "^9.2.0"
PyDrive2 = {extras = ["fsspec"], version = "^1.14.0"}
aiohttp = "^3.8.1"
fastapi = "^0.79.0"
gunicorn = "^20.1.0"
orjson = "^3.7.11"
pydantic = {extras = ["email"], version = "^1.9.2"}
python = "^3.10.2"
python-multipart = "^0.0.5"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
aiobotocore = "^2.4.0"
types-aiobotocore = {extras = ["s3"], version = "^2.4.0"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.14.5"
pyright = "^1.1.267"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
